# AdventOfCode

./: .gitignore  README.md
.devcontainer/: devcontainer.json
2015/: day10.py
2015/day10/: day10.py
2015/day5/: day5_part2.py
2015/day6/: day6.py
2015/day8/: day8_part2.py
2016/day2/: day2.py  day2_part2.py
2016/day3/: day3.py  day3_part2.py
2016/day4/: day4.py
2016/day5/: day5.py
2016/day7/: day7.py
2017/day1/: day1  day1.cpp  part1.cpp  part1.hpp  solutions.hpp
2023/day4/: day4.py
2023/day6/: day6.py
2023/day8/: day8.py
2023/day9/: day9.py  day9_part2.py
aocLib/cpp/include/: File.hpp  Geometry.hpp  Regex.hpp  String.hpp  Utils.hpp
aocLib/cpp/src/: CMakeLists.txt  File.cpp  Regex.cpp  String.cpp  Utils.cpp
aocLib/tools/: make_day_template.py  make_day_template_cpp.py  test_cpp_code.py
aocLib/tools/templates/: solutions.cpp
aocLib/tools/templates/cpp/: CMakeLists.txt  impl.cpp  solutions.hpp
aocLib/tools/templates/python/: solution.py
events/2015/day12/: day12.py
events/2015/day14/: impl.cpp  solutions.cpp  solutions.hpp
events/2015/day23/: impl.cpp  solutions.cpp  solutions.hpp
events/2015/day25/: CMakeLists.txt  impl.cpp  solutions.hpp
events/2015/day8/: day8.py
events/2016/day1/: day1.py
events/2016/day4/: day4.py
events/2016/day5/: day5_part2.py
events/2016/day6/: day6.py  day6_part2.py
events/2016/day7/: day7.py
events/2017/day1/: Makefile  day1  impl.cpp  solutions.cpp
events/2017/day2/: Makefile  day2.cpp  solutions.cpp  solutions.hpp
events/2017/day3/: CMakeLists.txt  impl.cpp  solutions.cpp  solutions.hpp
events/2017/day4/: CMakeLists.txt  dayx_impl.cpp  solutions.cpp  solutions.hpp
events/2017/day5/: CMakeLists.txt  impl.cpp  solutions.hpp
events/2017/day6/: impl.cpp  solutions.cpp  solutions.hpp
events/2017/day7/: impl.cpp  solutions.hpp
events/2017/day8/: impl.cpp  solutions.hpp
events/2018/day1/: CMakeLists.txt  impl.cpp  solutions.cpp  solutions.hpp
events/2018/day2/: impl.cpp  solutions.hpp
events/2018/day3/: impl.cpp  solutions.hpp
events/2018/day5/: impl.cpp  solutions.cpp  solutions.hpp
events/2019/day1/: impl.cpp  solutions.cpp  solutions.hpp
events/2020/day1/: impl.cpp  solutions.hpp
events/2020/day2/: impl.cpp  solutions.hpp
events/2020/day3/: impl.cpp  solutions.hpp
events/2021/day1/: impl.cpp
events/2021/day2/: impl.cpp  solutions.hpp
events/2022/kotlin/day1/solution/: .gitignore
events/2022/kotlin/day1/solution/src/: Main.kt
events/2022/kotlin/day10/solution/src/: Cpu.kt  Main.kt
events/2022/kotlin/day2/solution/src/: Main.kt  RockPaperScissors.kt
events/2022/kotlin/day3/solution/src/: Main.kt
events/2022/kotlin/day4/solution/: .gitignore
events/2022/kotlin/day4/solution/src/: Main.kt
events/2022/kotlin/day5/solution/src/: Main.kt
events/2022/kotlin/day6/solution/src/: main.kt
events/2022/kotlin/day7/solution/src/: Filesystem.kt  Main.kt
events/2022/kotlin/day8/solution/src/: HeightMap.kt  Main.kt  Matrix.kt
events/2022/kotlin/day9/solution/src/: Main.kt  Rope.kt
events/2023/day1/: day1.py  day1_part2.py
events/2023/day11/: day11.py
events/2023/day2/: day2.py  day2_part2.py
events/2023/day3/: day3.py  day3_part2.py
events/2023/day4/: day4_part2.py
events/2023/day5/: day5.py
events/2023/day6/: day6.py  day6_part2.py
events/2023/day8/: day8_part2.py
events/2024/day1/: day1.py
events/2024/day2/: day2.py
events/2024/day3/: day3.py
events/2024/day6/: day6.py
events/2024/day7/: solution.py
events/2024/day8/: solution.py
